--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <main>
       <section>
         <div class="container">
+          <h1>Leap Year!</h1>
           <form action="">
-            <input type="text" name="" id="input" />
-            <h5 id="fourdiv"></h5>
-            <h5 id="hundreddiv"></h5>
-            <h5 id="fourhundreddiv"></h5>
-            <h5 id="result"></h5>
+            <input type="number" name="" id="input" />
+            <h2 id="result"></h2>
           </form>
         </div>
       </section>
